--- a/docker/.env
+++ b/docker/.env
@@ -2,4 +2,4 @@ WS_DIR=ENME480_ws
 ROS_DOMAIN_ID=0
 YOUR_IP=192.168.77.134
 UR3E_IP=192.168.77.22
-USERNAME=enme480_docker
+USERNAME_DOCKER=enme480_docker
